# detect

./: .bump2version.cfg  .bumpversion.cfg  .clang-format  .cppcheck  .cspell.json  .gitignore  .scripts.ts  .trufflehog3.yml  Doxyfile  Gruntfile.js  README.md  SConstruct.py  conanfile.py  detect.hpp  detect_8hpp.html  detect_8hpp_source.html  dir_49e56c817e5e54854c35e136979f97ca.html  files.html  globals.html  globals_defs.html  index.html  main_8md.html  menudata.js  namespacemembers.html  namespacemembers_enum.html  namespacemembers_eval.html  namespaceplatform.html  namespaces.html  package.json  pyproject.toml
.github/actions/install/: action.yml
.github/workflows/: docs.yml  review.yaml  review.yml
.husky/: pre-commit
docs/: main.md
docs/sphinx/: conf.py
publish/all/: conandata.yml  conanfile.py
search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  defines_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  files_0.js  files_1.js  namespaces_0.js  pages_0.js  searchdata.js
src/: constants.hpp  detect.hpp  macros.hpp
src/constants/: mobile.hpp  os.hpp  paths.hpp  unix.hpp  unix.spec.cpp
src/macros/: mobile.hpp  os.hpp  unix.hpp
test_package/: CMakeLists.txt  SConstruct.py  conanfile.py  test.cpp
