[project]
name = "detect"
description = "A single header library to detect the OS at compile time."
version = "2.0.1"

keywords = ["os", "platform", "introspect"]

[project.optional-dependencies]
all = [
    "breathe~=4.35.0",
    "conan~=2.2.0",
    "cppclean@git+https://github.com/myint/cppclean.git@811ed459c9f650ad6135e9c73455136af8885716",
    "furo~=2024.1.0",
    "matplotlib~=3.8.0",
    "miniscons~=0.12.0",
    "myst-parser~=2.0.0",
    "SCons~=4.3.0",
    "Sphinx~=7.2.0",
    "sphinxext-opengraph~=0.9.0",
    "trufflehog3~=3.0.0",
    "walkmate~=1.5.0",
]

[project.license]
name = "MIT"
file = "LICENSE.md"
content-type = "text/markdown"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
repository = "https://github.com/JoelLefkowitz/detect"
homepage = "https://joellefkowitz.github.io/detect"

[[project.authors]]
name = "Joel Lefkowitz"
email = "joellefkowitz@hotmail.com"

[tool.metadata]
publisher = "Conan"
languages = ["C++"]
frameworks = []
paradigms = ["Functional"]
lifecycle = "Alpha"
